--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Project</title>
   </head>
   <body>
     <h1>This is an example project.</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cumque
+      laudantium eius possimus ab! Consequatur laboriosam, quisquam repellat
+      nulla eligendi quod tempore! Natus, quasi itaque impedit veniam expedita
+      omnis iusto aspernatur unde dolorum quod dolorem eos id inventore ipsum
+      magni, ex nobis incidunt minus perferendis! Quae magnam itaque quasi,
+      possimus eius quibusdam maxime mollitia! Architecto ipsam fuga inventore,
+      aspernatur ad nobis ipsum vel veritatis totam tempore dolorem ullam iste
+      doloribus dolor aperiam incidunt mollitia sunt consectetur quidem hic
+      sapiente odit. Molestias, incidunt. Natus esse necessitatibus rerum cumque
+      quaerat, eum commodi! Voluptates aut tenetur enim id aspernatur sunt
+      facilis modi ipsum!
+    </p>
   </body>
 </html>
